--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             font-family: 'Lobster', sans-serif;
             position: relative;
             overflow: hidden;
-            padding: 20px; /* Add padding for better spacing on small screens */
+            padding: 20px;
+            background: linear-gradient(to bottom, #1e3c72, #2a5298); /* Gradient for modern look */
+            color: white; /* Ensures text contrast */
         }
 
         body::before {
@@ -27,14 +29,20 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://i.pinimg.com/1200x/ec/e4/0b/ece40b84cccca6434d81477de1c27b85.jpg');
+            background-image: url('https://cdn.pixabay.com/photo/2017/11/09/21/41/christmas-2937827_1280.jpg');
             background-size: cover;
+            background-position: center;
+            opacity: 0.5; /* Adds a subtle overlay */
             z-index: -1;
         }
 
         .container {
             margin: 0;
             text-align: center;
+            background: rgba(255, 255, 255, 0.2); /* Semi-transparent background for better visibility */
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
         .snow-globe {
@@ -42,9 +50,9 @@
             height: auto;
             max-width: 300px;
             max-height: 300px;
-            border: 10px solid black;
+            border: 10px solid white;
             border-radius: 50%;
-            background: radial-gradient(circle, #fff, #ddeef7);
+            background: radial-gradient(circle, #ffffff, #ddeef7);
             overflow: hidden;
             position: relative;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
@@ -56,10 +64,10 @@
             width: 200%;
             height: 200%;
             justify-content: center;
-            background-image: url('https://i.pinimg.com/736x/4e/42/a8/4e42a83e8efeb54200d0da89db574037.jpg');
+            background-image: url('https://cdn.pixabay.com/photo/2016/11/29/12/33/snowflakes-1869611_1280.png');
             background-size: contain;
-            filter: blur(2px);
-            animation: snow-fall 0s linear infinite;
+            filter: blur(1px);
+            animation: snow-fall 5s linear infinite;
         }
 
         @keyframes snow-fall {
@@ -81,8 +89,8 @@
             text-align: center;
             opacity: 0;
             transition: opacity 0.5s;
-            color: black;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            color: white;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         }
 
         .name.revealed {
@@ -135,6 +143,7 @@
             width: 90%;
             text-align: center;
             border-radius: 10px;
+            color: black;
         }
 
         .close-btn {
@@ -204,6 +213,7 @@
     <div class="container">
         <label for="user-name">Select Your Name:</label>
         <select id="user-name">
+            <option value="" disabled selected>Select Your Name</option>
             <option value="Chinnu">Chinnu</option>
             <option value="Jyothi">Jyothi</option>
             <option value="Preethi">Preethi</option>
